# sloth

./: .gitignore  Cargo.toml  GOALS.md  LICENSE.txt  README.md  TODO.md  eof_error.slo  factorial.slo  fibonacci.slo  snake.slo  syntax_error.slo  test  test.slo  test_read.slo  todo.md
examples/: average.slo  factorial.slo  fibonacci.slo  hello_world.slo  lists.slo  method.slo  numbers.slo  syntax_error.slo  true_false_input.slo  type_conversion.slo  vector.slo
overview/: 1-introduction.md  2-operations.md  2-types.md  3-operations.md  4-functions-and-methods.md  5-flow-control.md  6-builtins.md  7-lists.md
sloth_derive/: Cargo.toml
sloth_derive/src/: lib.rs
src/: builder.rs  element.rs  errors.rs  main.rs  position.rs  tokenizer.rs
src/built-ins/: interpreter.rs
src/built_in/: clock.rs  default.rs  files.rs  graphics.rs  io.rs  lists.rs  maths.rs  media.rs  mod.rs  numbers.rs  random.rs  strings.rs  time.rs  types.rs
src/builtins/: clock.rs  files.rs  io.rs  lists.rs  maths.rs  media.rs  mod.rs  numbers.rs  random.rs  strings.rs
src/lexer/: keyword.rs  mod.rs  operator.rs  separator.rs  token.rs  tokeniser.rs  tokenstream.rs
src/operations/: add.rs  cmp.rs  div.rs  inv.rs  len.rs  mod.rs  modulo.rs  mul.rs  sub.rs
src/parser/: assignment.rs  bracket.rs  builtin.rs  expression.rs  flow_control.rs  function.rs  functioncall.rs  import.rs  list.rs  literal.rs  mod.rs  object_construction.rs  operation.rs  statement.rs  statics.rs  structure.rs  types.rs  varcall.rs
src/sloth/: expression.rs  function.rs  mod.rs  operation.rs  operator.rs  program.rs  scope.rs  statement.rs  structure.rs  types.rs  value.rs
unit_tests/: builtins.slo  hello_world.slo  identifier_wrapper.slo  recursive.slo  run_tests.sh  structures.slo
(+8 files in other folders)
