[package]
name = "sloth"
version = "0.1.0"
edition = "2021"
authors = ["MyselfLeo"]
readme = "README.md"
repository = "https://github.com/MyselfLeo/sloth"
license = "Apache-2.0"
keywords = ["programming-language", "interpreter", "language", "sloth"]
categories = ["compilers"]
description = "A weird, slow and a bit moldy interpreted programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.3", features = ["derive"] }
regex = "1.5.6"
text_io = "0.1.10"