[package]
name = "slothlang"
version = "0.9.1"
edition = "2021"
authors = ["MyselfLeo"]
readme = "README.md"
repository = "https://github.com/MyselfLeo/sloth"
license = "Apache-2.0"
keywords = ["programming-language", "interpreter", "language", "sloth"]
categories = ["compilers"]
description = "A weird, slow and a bit moldy interpreted programming language"
exclude = ["examples/*", "overview/*"]

[dependencies]
clap = { version = "3.2.3", features = ["derive"] }
regex = "1.5.6"
text_io = "0.1.10"
sdl2 = "0.35.2"
rand = "0.8.5"